[project]
name = "libpass"
version = "1.9.1"
description = "Fork of passlib, a comprehensive password hashing framework supporting over 30 schemes"
authors = [
    { name = "Eli Collins", email = "elic@assurancetechnologies.com" },
]
maintainers = [
    { name = "Doctor", email = "thirvondukr@gmail.com" },
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { text = "BSD" }
keywords = [
    "2fa",
    "apache",
    "argon2",
    "bcrypt",
    "crypt",
    "hash",
    "htdigest",
    "htpasswd",
    "md5-crypt",
    "passlib",
    "password",
    "pbkdf2",
    "scrypt",
    "secret",
    "security",
    "sha256-crypt",
    "sha512-crypt",
    "totp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ThirVondukr/passlib"
Repository = "https://github.com/ThirVondukr/passlib"
Docs = "https://passlib.readthedocs.io"
Issues = "https://github.com/ThirVondukr/passlib/issues"
Changelog = "https://github.com/ThirVondukr/passlib/blob/main/CHANGELOG.md"

[project.optional-dependencies]
argon2 = [
    "argon2-cffi>=18.2.0",
]
bcrypt = [
    "bcrypt>=3.1.0",
]
totp = [
    "cryptography>=43.0.1",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest-cov>=6.0.0",
    "typing-extensions>=4.6.0",
]
lint = [
    "deptry>=0.23.0",
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]
test = [
    "coverage>=7.6.12",
    "django>=4.2.16",
    "django-stubs>=5.1.1",
    "pytest>=8.3.4",
    "pytest-archon>=0.0.6",
    "pytest-xdist>=3.6.1",
    "typeguard>=4.4.2",
]
docs = [
    "cloud-sptheme>=1.10.1.post20200504175005",
    "sphinx>=7.4.7",
    "sphinxcontrib-fulltoc>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "passlib",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["test"]


[tool.coverage.run]
source = ["passlib"]
omit = []
command_line = "-m pytest -v"
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "class .*\\(.*\\bProtocol\\b.*\\):",
    "@(?:typing\\.)?overload",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true
skip_empty = true
precision = 2
fail_under = 0

[tool.deptry]
known_first_party = ["passlib"]

[tool.deptry.per_rule_ignores]
DEP001 = [
    "argon2pure",
    "fastpbkdf2",
    "scrypt",
    "matplotlib",
]
DEP004 = [
    "django",
    "cloud_sptheme",
]


[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F401"]
ignore = [
    "PT011",
    "E501",
    "ISC001", # Conflicts with ruff format
    "COM812", # Conflicts with ruff format
    # Disabled categories
    "N",
    "ANN",
    "S",
    "FBT",
    "B",
    "A",
    "C4",
    "DTZ",
    "EM",
    "D",  # docstrings
    "PTH", # Pathlib
    "RUF",
    "PLR",
    "FIX",
    "TD",
    "ARG",
    "TRY",
    "SLF",
    "ERA",
    "C90",
    "PD", # Pandas
    "BLE",
    "FLY",
    "UP031",
    "PLW2901",
]

[tool.ruff.lint.per-file-ignores]
"passlib/hash.py" = ["F401"]
"passlib/crypto/_blowfish/base.py" = ["E741"]
"passlib/crypto/_blowfish/unrolled.py" = ["E741"]
"passlib/*" = ["T"]
"docs/conf.py" = ["INP001"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.9.1"
tag_format = "$version"
update_changelog_on_bump = true
version_files = [
    "passlib/__init__.py",
    "pyproject.toml:version"
]


[tool.pytest.ini_options]
addopts = "-W error::Warning"


[tool.mypy]
python_version = "3.9"

follow_imports = "normal"
ignore_missing_imports = false
